--- a/readme
+++ b/readme
@@ -1,5 +1,24 @@
-mkdir build
-mkdir build/images
-mkdir build/containers
-tar -xf arch-docker-img.tar -C build/images/archlinux
-tar -xf centos.tar -C build/images/centos
+---简介---
+    ducker是一个模仿docker的容器demo，实现了一小部分docker的命令
+---init---
+    --先获取一些操作系统的镜像文件arch-docker-img.tar，centos.tar等，可以从docker上弄到。
+        docker run --rm -dit --name arch-docker archlinux
+        docker export -o arch-docker-img.tar arch-docker
+    --然后是手动的生成一些目录，并解压image
+        mkdir build
+        mkdir build/images
+        mkdir build/containers
+        tar -xf arch-docker-img.tar -C build/images/archlinux
+        tar -xf centos.tar -C build/images/centos
+---make---
+    make会在build目录下生成。ducker，使用ducker就可以在build目录下执行一些容器操作了。
+---done---
+    ducker已经实现了部分命令，如下所示。
+    {"help","Display ducker's commands infomation","",(void *)help},
+    {"images","List images","",(void *)images},
+    {"create","Create a new container","create [image] [container]",(void *)create},
+    {"rm","Remove one container","rm [container]",(void *)rm},
+    {"exec","Run a command in a running container","exec [container] [command...]",(void *)exec}
+---todo---
+    还可以再实现一些docker的命令
+    完成验证和实验报告
